checking_and_actualization

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -3679,12 +3679,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filtrar registros con al menos 20 m² y 10,000 euros\n",
     "spain_housing = spain_housing[(spain_housing['m2_real'] >= 20) & (spain_housing['price'] >= 10000)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_conditioner</th>\n",
+       "      <th>bath_num</th>\n",
+       "      <th>chimney</th>\n",
+       "      <th>garden</th>\n",
+       "      <th>m2_real</th>\n",
+       "      <th>price</th>\n",
+       "      <th>room_num</th>\n",
+       "      <th>storage_room</th>\n",
+       "      <th>swimming_pool</th>\n",
+       "      <th>terrace</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>p_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>7.872600e+04</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "      <td>78726.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.249638</td>\n",
+       "      <td>1.907591</td>\n",
+       "      <td>0.014722</td>\n",
+       "      <td>0.266646</td>\n",
+       "      <td>264.471458</td>\n",
+       "      <td>3.358165e+05</td>\n",
+       "      <td>3.097452</td>\n",
+       "      <td>0.423367</td>\n",
+       "      <td>0.183993</td>\n",
+       "      <td>0.486701</td>\n",
+       "      <td>40.915515</td>\n",
+       "      <td>-2.191318</td>\n",
+       "      <td>20406.269288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.432806</td>\n",
+       "      <td>0.965711</td>\n",
+       "      <td>0.120438</td>\n",
+       "      <td>0.442209</td>\n",
+       "      <td>522.108755</td>\n",
+       "      <td>4.986391e+05</td>\n",
+       "      <td>1.143468</td>\n",
+       "      <td>0.494096</td>\n",
+       "      <td>0.387481</td>\n",
+       "      <td>0.499826</td>\n",
+       "      <td>2.421005</td>\n",
+       "      <td>4.054569</td>\n",
+       "      <td>15501.911561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>1.000000e+04</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>27.725499</td>\n",
+       "      <td>-18.024301</td>\n",
+       "      <td>1001.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>1.200000e+05</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>39.502944</td>\n",
+       "      <td>-4.107888</td>\n",
+       "      <td>7320.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>106.000000</td>\n",
+       "      <td>1.990000e+05</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40.942903</td>\n",
+       "      <td>-2.294010</td>\n",
+       "      <td>15880.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>192.000000</td>\n",
+       "      <td>3.620000e+05</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>43.204257</td>\n",
+       "      <td>2.489389</td>\n",
+       "      <td>28041.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>27000.000000</td>\n",
+       "      <td>2.000000e+07</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>43.772880</td>\n",
+       "      <td>4.110445</td>\n",
+       "      <td>70712.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       air_conditioner      bath_num       chimney        garden  \\\n",
+       "count     78726.000000  78726.000000  78726.000000  78726.000000   \n",
+       "mean          0.249638      1.907591      0.014722      0.266646   \n",
+       "std           0.432806      0.965711      0.120438      0.442209   \n",
+       "min           0.000000      1.000000      0.000000      0.000000   \n",
+       "25%           0.000000      1.000000      0.000000      0.000000   \n",
+       "50%           0.000000      2.000000      0.000000      0.000000   \n",
+       "75%           0.000000      2.000000      0.000000      1.000000   \n",
+       "max           1.000000      9.000000      1.000000      1.000000   \n",
+       "\n",
+       "            m2_real         price      room_num  storage_room  swimming_pool  \\\n",
+       "count  78726.000000  7.872600e+04  78726.000000  78726.000000   78726.000000   \n",
+       "mean     264.471458  3.358165e+05      3.097452      0.423367       0.183993   \n",
+       "std      522.108755  4.986391e+05      1.143468      0.494096       0.387481   \n",
+       "min       20.000000  1.000000e+04      1.000000      0.000000       0.000000   \n",
+       "25%       80.000000  1.200000e+05      2.000000      0.000000       0.000000   \n",
+       "50%      106.000000  1.990000e+05      3.000000      0.000000       0.000000   \n",
+       "75%      192.000000  3.620000e+05      4.000000      1.000000       0.000000   \n",
+       "max    27000.000000  2.000000e+07      7.000000      1.000000       1.000000   \n",
+       "\n",
+       "            terrace      latitude     longitude        p_code  \n",
+       "count  78726.000000  78726.000000  78726.000000  78726.000000  \n",
+       "mean       0.486701     40.915515     -2.191318  20406.269288  \n",
+       "std        0.499826      2.421005      4.054569  15501.911561  \n",
+       "min        0.000000     27.725499    -18.024301   1001.000000  \n",
+       "25%        0.000000     39.502944     -4.107888   7320.000000  \n",
+       "50%        0.000000     40.942903     -2.294010  15880.000000  \n",
+       "75%        1.000000     43.204257      2.489389  28041.000000  \n",
+       "max        1.000000     43.772880      4.110445  70712.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spain_housing.describe()"
    ]
   },
   {
@@ -3696,7 +3911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
