filtering_price_segment

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -5191,6 +5191,35 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "The correlation matrix shows that square footage is the variable most strongly related to apartment prices (0.6), followed by the number of bathrooms (0.48). Additionally, there is a moderate correlation between square footage and the number of rooms. The chart indicates that area is the most influential factor in pricing, followed by the number of rooms."
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Analysis by Price Segment\n"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-07T08:23:19.184970Z",
+     "start_time": "2024-11-07T08:23:19.074390Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# filtering by price segment\n",
+    "affordable_apartments = apartments[apartments['price_segment'] == 'Affordable']\n",
+    "mid_range_apartments = apartments[apartments['price_segment'] == 'Mid-Range']\n",
+    "luxury_apartments = apartments[apartments['price_segment'] == 'Luxury']\n"
+   ],
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
