title_section_correction

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -8812,7 +8812,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction to Hypothesis Testing and Predictive Analysis\n",
+    "### Introduction \n",
     "\n",
     "This section focuses on advanced statistical analysis and modeling to validate the key findings from the Exploratory Data Analysis (EDA) and uncover new insights.  \n",
     "Hypothesis tests are conducted to examine significant relationships and differences observed during the EDA, while a linear regression model evaluates the impact of geographic variables on property prices.  \n",
@@ -8838,7 +8838,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparison of Means: Differences Between Size Segments\n",
+    "### Differences Between Size Segments\n",
     "\n",
     "**Hypotheses**\n",
     "- **H₀ (Null Hypothesis):** There are no significant differences in the mean price among the Small, Medium, and Large segments.  \n",
@@ -8967,7 +8967,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Independence Tests: Relationship Between Price and Property Condition  \n",
+    "### Relationship Between Price and Property Condition  \n",
     "\n",
     "Evaluate whether property condition (new, resale, or fixer-upper) has a significant impact on price.  \n",
     "\n",
@@ -9089,7 +9089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlation Tests: Relationship Between Number of Bathrooms and Price\n",
+    "### Relationship Between Number of Bathrooms and Price\n",
     "\n",
     "Evaluate whether the number of bathrooms has a significant relationship with property prices.\n",
     "\n",
@@ -9168,6 +9168,15 @@
    "metadata": {},
    "source": [
     "The correlation is moderate (0.49) and the p-value is below the typical threshold of (0.05), indicating that the relationship is statistically significant. This confirms that the number of bathrooms influences property prices. It supports the observations made during the EDA, particularly for the Medium and Large segments. However, the correlation is not strong enough to consider the number of bathrooms as the sole determining factor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Geographic Impact on Prices\n",
+    "\n",
+    "Assess how variables such as latitude, longitude, and region significantly influence property prices.  "
    ]
   }
  ],
