--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-18T07:56:02.722366Z",
@@ -174,11 +174,17 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import gc\n",
+    "import folium\n",
+    "\n",
+    "# stat libraries\n",
     "from scipy.stats import f_oneway\n",
     "from scipy.stats import pearsonr\n",
-    "import gc\n",
-    "from scripts.functions import *\n",
-    "import folium"
+    "import statsmodels.api as sm\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# my functions\n",
+    "from scripts.functions import *"
    ]
   },
   {
@@ -9177,6 +9183,153 @@
     "### Geographic Impact on Prices\n",
     "\n",
     "Assess how variables such as latitude, longitude, and region significantly influence property prices.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preparing data\n",
+    "geo_price_data = apartments[['price', 'latitude', 'longitude', 'region']]\n",
+    "geo_price_data = pd.get_dummies(geo_price_data, columns=['region'], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price                          float64\n",
+      "latitude                       float64\n",
+      "longitude                      float64\n",
+      "region_Canarias                  int32\n",
+      "region_Castilla y León           int32\n",
+      "region_Castilla-La Mancha        int32\n",
+      "region_Cataluña                  int32\n",
+      "region_Comunidad Valenciana      int32\n",
+      "region_Comunidad de Madrid       int32\n",
+      "region_Galicia                   int32\n",
+      "region_Islas Baleares            int32\n",
+      "region_País Vasco                int32\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fix problem with bool variables\n",
+    "geo_price_data = geo_price_data.astype({col: 'int' for col in geo_price_data.columns if geo_price_data[col].dtype == 'bool'})\n",
+    "# Verifiying\n",
+    "print(geo_price_data.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Independent and dependent variable\n",
+    "X = geo_price_data.drop(columns=['price'])\n",
+    "y = geo_price_data['price']\n",
+    "X = sm.add_constant(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  price   R-squared:                       0.193\n",
+      "Model:                            OLS   Adj. R-squared:                  0.192\n",
+      "Method:                 Least Squares   F-statistic:                     1051.\n",
+      "Date:                Fri, 20 Dec 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        06:51:14   Log-Likelihood:            -6.6338e+05\n",
+      "No. Observations:               48516   AIC:                         1.327e+06\n",
+      "Df Residuals:                   48504   BIC:                         1.327e+06\n",
+      "Df Model:                          11                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===============================================================================================\n",
+      "                                  coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------------\n",
+      "const                       -3.383e+06   1.67e+05    -20.261      0.000   -3.71e+06   -3.06e+06\n",
+      "latitude                     9.419e+04   4405.504     21.380      0.000    8.56e+04    1.03e+05\n",
+      "longitude                    3162.6404   1841.644      1.717      0.086    -447.006    6772.286\n",
+      "region_Canarias              8.615e+05   4.14e+04     20.823      0.000     7.8e+05    9.43e+05\n",
+      "region_Castilla y León      -3.989e+05   1.92e+04    -20.760      0.000   -4.37e+05   -3.61e+05\n",
+      "region_Castilla-La Mancha   -1.746e+05   1.05e+04    -16.550      0.000   -1.95e+05   -1.54e+05\n",
+      "region_Cataluña             -4.472e+05   2.45e+04    -18.217      0.000   -4.95e+05   -3.99e+05\n",
+      "region_Comunidad Valenciana -1.911e+05   1.34e+04    -14.265      0.000   -2.17e+05   -1.65e+05\n",
+      "region_Comunidad de Madrid  -6.021e+04   1.47e+04     -4.108      0.000   -8.89e+04   -3.15e+04\n",
+      "region_Galicia              -5.292e+05   2.77e+04    -19.110      0.000   -5.83e+05   -4.75e+05\n",
+      "region_Islas Baleares        1.637e+04   1.79e+04      0.916      0.360   -1.87e+04    5.14e+04\n",
+      "region_País Vasco           -4.205e+05    2.6e+04    -16.166      0.000   -4.72e+05    -3.7e+05\n",
+      "==============================================================================\n",
+      "Omnibus:                    35067.688   Durbin-Watson:                   0.320\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           630189.519\n",
+      "Skew:                           3.356   Prob(JB):                         0.00\n",
+      "Kurtosis:                      19.331   Cond. No.                     7.67e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 7.67e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = sm.OLS(y, X).fit()\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Results\n",
+    "\n",
+    "- **R-squared**: The model explains 19.3% of the variability in property prices, indicating that location has a moderate impact on prices.\n",
+    "\n",
+    "- **Significant Coefficients**:\n",
+    "   - **Latitude**: With a coefficient of 94,190, it indicates that for each additional degree of latitude (north), the price increases by an average of 94,190 monetary units.\n",
+    "   - **Region Canarias**: Increases the price by an average of 861,500 units, making it the region with the highest positive impact.\n",
+    "   - **Region Castilla y León**: Average reduction of 398,900 units.\n",
+    "   - **Region Castilla-La Mancha**: Average reduction of 174,600 units.\n",
+    "   - **Region Cataluña**: Average reduction of 447,200 units.\n",
+    "   - **Region Galicia**: Average reduction of 529,200 units.\n",
+    "   - **País Vasco**: Average reduction of 420,500 units.\n",
+    "   - **Islas Baleares**: Although it has a positive coefficient (16,370), it is not statistically significant (p > 0.05).\n",
+    "\n",
+    "- **Non-Significant Variables**:\n",
+    "   - **Longitude**: Does not show a statistically significant impact on prices (p = 0.086).\n",
+    "   - **Islas Baleares**: Although it is a standout region in previous analyses, the model does not find a significant relationship after adjusting for other variables.\n",
+    "\n",
+    "- **Multicollinearity**: The high \"condition number\" suggests possible multicollinearity issues, meaning some independent variables are correlated, which could affect the stability of the coefficients.\n",
+    "\n",
+    "- **Residual Distribution**: The high Omnibus test value and Jarque-Bera statistic indicate that residuals are not normally distributed, which may limit the interpretation of results.\n",
+    "\n",
+    "**Conclusion**:\n",
+    "\n",
+    "The model demonstrates that geographic location, represented by latitude and certain regions, has a significant impact on property prices. However, the model highlights that other factors not included explain most of the variability in prices. This aligns with previous EDA observations, emphasizing the need to incorporate additional variables for a more comprehensive understanding."
    ]
   }
  ],
