create_secction_comunicate_findding

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -9335,6 +9335,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Visualization and Communication of Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
