--- a/02-Geolocalization.ipynb
+++ b/02-Geolocalization.ipynb
@@ -26,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:37:58.831157Z",
-     "start_time": "2025-10-09T21:37:58.826969Z"
+     "end_time": "2025-10-12T20:39:04.994710Z",
+     "start_time": "2025-10-12T20:39:04.949399Z"
     }
    },
    "cell_type": "code",
@@ -48,7 +48,7 @@
    ],
    "id": "bf7c8160aa92943",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -131,16 +131,19 @@
    "id": "533e287824b66b00"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T20:47:53.522436Z",
+     "start_time": "2025-10-12T20:47:53.284455Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Output directory\n",
     "directory = 'data/'\n",
     "\n",
     "# Input File\n",
-    "df = pd.read_csv('data/clean_dataframe.csv')\n",
+    "df = pd.read_csv('data/clean_data.csv')\n",
     "\n",
     "# Chunks Size\n",
     "chunksize = 10000\n",
@@ -148,7 +151,9 @@
     "# chunks_files = create_chunks(input_csv, chunksize, directory)\n",
     "# print(chunks_files)"
    ],
-   "id": "81e1794c48cf27fd"
+   "id": "81e1794c48cf27fd",
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -259,6 +264,14 @@
    "cell_type": "markdown",
    "source": "The **process_chunk** function generates the new data columns created with **geolocate** and **split_address** function and adds them to the section of the dataframe being processed, then saves it to a CSV file. It then frees the created dataframe from memory and forces garbage collection. This method ensures that the memory used by the dataframe is released after saving, helping to maintain efficient memory usage when processing large volumes of data.",
    "id": "aa21a345a20f7433"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1d805bd7235de701"
   },
   {
    "metadata": {
@@ -373,30 +386,23 @@
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9c3f49de05c138a7"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": "### Coordinate Fluctuation (Jittering)",
    "id": "2017f1a4242f92c6"
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "**Jittering** is a technique used to slightly disperse points that have identical or very similar coordinates, making data visualization and analysis easier. To perform Jittering, a small amount of random noise is added to the coordinates of each point to disperse them slightly. The **move_coordinates** function moves the coordinates by a random angle and distance provided by the **disperse_coordinates** function. This random angle and distance are converted into latitude and longitude degrees, which are then added to the original coordinates. In this way, multiple properties with the same coordinates will be separated by different distances and angles from the original point. One disadvantage of using this technique is that when the location is near the coast, it may result in locations appearing over the sea.\n",
-    "\n",
-    "The **disperse_coordinates** function first groups all the duplicate coordinates and applies the **move_coordinates** function to each line with a different angle and distance value within the ranges specified in the parameters.\n",
-    "\n",
-    "In our project, properties that share the same coordinates are because:\n",
-    "- In the case of buildings.\n",
-    "- if the address was not in the correct format, the geolocation function used the 'city_prov' variable, geolocating only the city.\n",
-    "- It is also common to find properties for sale that do not display their exact address and instead share a common address. This is a strategy used by real estate agents known as **blind listing**. In this strategy, the exact location of the property is not publicly disclosed to protect the seller's information and prevent other agents or potential buyers from contacting the owner directly without going through the agent handling the sale."
-   ],
-   "id": "5da4d28219810f72"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:38:09.446011Z",
-     "start_time": "2025-10-09T21:38:09.438848Z"
+     "end_time": "2025-10-12T20:48:47.003390Z",
+     "start_time": "2025-10-12T20:48:46.996190Z"
     }
    },
    "cell_type": "code",
@@ -446,13 +452,13 @@
    ],
    "id": "695a005e67c9d90d",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:36:44.559307Z",
-     "start_time": "2025-10-09T21:36:44.277331Z"
+     "end_time": "2025-10-12T20:48:23.097499Z",
+     "start_time": "2025-10-12T20:48:22.872031Z"
     }
    },
    "cell_type": "code",
@@ -462,13 +468,13 @@
    ],
    "id": "9e4748c818ac6a6d",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:38:24.244891Z",
-     "start_time": "2025-10-09T21:38:16.556776Z"
+     "end_time": "2025-10-12T20:48:59.141858Z",
+     "start_time": "2025-10-12T20:48:52.052239Z"
     }
    },
    "cell_type": "code",
@@ -483,7 +489,7 @@
    ],
    "id": "569543401c094305",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -500,8 +506,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:39:29.702812Z",
-     "start_time": "2025-10-09T21:39:29.666985Z"
+     "end_time": "2025-10-12T20:49:02.547518Z",
+     "start_time": "2025-10-12T20:49:02.515810Z"
     }
    },
    "cell_type": "code",
@@ -541,7 +547,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -563,8 +569,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:39:38.135499Z",
-     "start_time": "2025-10-09T21:39:37.550728Z"
+     "end_time": "2025-10-12T20:49:07.643373Z",
+     "start_time": "2025-10-12T20:49:07.053264Z"
     }
    },
    "cell_type": "code",
@@ -594,7 +600,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -605,8 +611,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:39:45.469954Z",
-     "start_time": "2025-10-09T21:39:45.463318Z"
+     "end_time": "2025-10-12T20:49:11.613196Z",
+     "start_time": "2025-10-12T20:49:11.606616Z"
     }
    },
    "cell_type": "code",
@@ -626,13 +632,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:39:46.840753Z",
-     "start_time": "2025-10-09T21:39:46.826867Z"
+     "end_time": "2025-10-12T20:49:13.097439Z",
+     "start_time": "2025-10-12T20:49:13.078932Z"
     }
    },
    "cell_type": "code",
@@ -642,13 +648,13 @@
    ],
    "id": "c886dbdcb6acae29",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T21:39:49.143074Z",
-     "start_time": "2025-10-09T21:39:49.136783Z"
+     "end_time": "2025-10-12T20:49:13.988078Z",
+     "start_time": "2025-10-12T20:49:13.982490Z"
     }
    },
    "cell_type": "code",
@@ -664,11 +670,11 @@
      "output_type": "stream",
      "text": [
       "Latitude: Min = 27.7254993, Max = 43.77288\n",
-      "Longitude: Min = -18.024301, Max = 4.110824609269001\n"
+      "Longitude: Min = -18.024301, Max = 4.111821376449803\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 19
   },
   {
    "metadata": {
@@ -678,13 +684,13 @@
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 15,
    "source": [
     "## Save Dataframe\n",
     "processed_data.to_csv('data/geolocated_data.csv', index=False)"
    ],
-   "id": "ba9d218aad4d854a",
-   "outputs": [],
-   "execution_count": 15
+   "id": "ba9d218aad4d854a"
   }
  ],
  "metadata": {
