restructure in 3 notebook

--- a/01_Extraction_and_transformation.ipynb
+++ b/01_Extraction_and_transformation.ipynb
@@ -112,8 +112,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-09T17:13:11.428072Z",
-     "start_time": "2025-10-09T17:13:10.127876Z"
+     "end_time": "2025-11-19T10:14:13.489804Z",
+     "start_time": "2025-11-19T10:14:13.473362Z"
     }
    },
    "source": [
@@ -122,10 +122,10 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import gc"
+    "import gc\n"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
