--- a/03_Data_Analysis.ipynb
+++ b/03_Data_Analysis.ipynb
@@ -5005,6 +5005,27 @@
     "\n",
     "The model demonstrates that geographic location, represented by latitude and certain regions, has a significant impact on property prices. However, the model highlights that other factors not included explain most of the variability in prices. This aligns with previous EDA observations, emphasizing the need to incorporate additional variables for a more comprehensive understanding."
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Tableau Dashboard"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The project is presented through an interactive dashboard in Tableau, designed to provide a clear and understandable visualization of the analyzed data. This dashboard allows users to explore information dynamically, combining different charts, tables, and filters that facilitate the interpretation of results.\n",
+    "\n",
+    "Each section of the dashboard is organized to highlight the most relevant insights, enabling users to identify trends, patterns, and key relationships in the data intuitively. In addition, interactive filters and segmentation options allow for a deeper analysis of specific areas, adapting to different visualization and decision-making needs.\n",
+    "\n",
+    "Thanks to this visual and dynamic approach, the dashboard not only presents the project results in a structured way but also facilitates effective communication of the findings to any audience, regardless of their technical background."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "You can find it in the project folder."
   }
  ],
  "metadata": {
